--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/nathanzbl/resortventuresis403#readme",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^5.1.0"
-  }
+  },
+  "keywords": []
 }
